polish  the log display
